--- a/tasks/tasklogs.html
+++ b/tasks/tasklogs.html
@@ -16,7 +16,7 @@
 			$(function(){
 				var taskid = getQueryString('taskid');
 				//alert(taskid);
-				loadTaskLog(taskid,'tasklist');
+				//loadTaskLog(taskid,'tasklist');
 				$('.calendarimg').on('click',calenderimgclick);
 				$('.pencilimg').on('click',{taskid:taskid},pencilimgclick);
 				$('#comfirm').on('click',{taskid:taskid},confirmlog);
@@ -43,49 +43,49 @@
 			<div id='tasklist'></div>
 		</div>
 		<div class="logback">
-			<div class="logcontent">
-				<form>
-				<div class="logtitlecontent"><h3>填写日志</h3></div>
-				<div class="weui_cells weui_cells_form">
-		            <div class="weui_cell">
-		                <div class="weui_cell_hd"><label for="" class="weui_label">日期</label></div>
-		                <div class="weui_cell_bd weui_cell_primary">
-		                    <input class="weui_input" name="workdate" type="date" value=""/>
-		                </div>
-		            </div>
-		            <div class="weui_cell">
-		                <div class="weui_cell_bd weui_cell_primary">
-		                    <textarea name="worknote" class="weui_textarea" placeholder="请输入日志内容" rows="4"></textarea>
-		                    <!--<div class="weui_textarea_counter"><span>0</span>/200</div>-->
-		                </div>
-		            </div>
-		            <div class="weui_cell weui_cell_select weui_select_after">
-		                <div class="weui_cell_hd">
-		                    	进度
-		                </div>
-		                <div class="weui_cell_bd weui_cell_primary">
-		                    <select class="weui_select" name="percent">
-		                        <option value="10">10%</option>
-		                        <option value="20">20%</option>
-		                        <option value="30">30%</option>
-		                        <option value="40">40%</option>
-		                        <option value="50">50%</option>
-		                        <option value="60">60%</option>
-		                        <option value="70">70%</option>
-		                        <option value="80">80%</option>
-		                        <option value="90">90%</option>
-		                        <option value="100">100%</option>
-		                    </select>
-		                </div>
-		            </div>
-				</div>
-				<div class="button_sp_area" style="text-align: center;margin-left: auto;margin-right: auto;">
-		            <a id="comfirm" class="weui_btn weui_btn_mini weui_btn_primary" style="width: 30%;">确认</a>
-		            <a id="cancle" class="weui_btn weui_btn_mini weui_btn_default" style="width: 30%;">取消</a>						
-				</div>					
-				</form>
-			</div>
 		</div>
+		<div class="logcontent">
+			<form>
+			<div class="logtitlecontent"><h3>填写日志</h3></div>
+			<div class="weui_cells weui_cells_form">
+	            <div class="weui_cell">
+	                <div class="weui_cell_hd"><label for="" class="weui_label">日期</label></div>
+	                <div class="weui_cell_bd weui_cell_primary">
+	                    <input class="weui_input" name="workdate" type="date" value=""/>
+	                </div>
+	            </div>
+	            <div class="weui_cell">
+	                <div class="weui_cell_bd weui_cell_primary">
+	                    <textarea name="worknote" class="weui_textarea" placeholder="请输入日志内容" rows="4"></textarea>
+	                    <!--<div class="weui_textarea_counter"><span>0</span>/200</div>-->
+	                </div>
+	            </div>
+	            <div class="weui_cell weui_cell_select weui_select_after">
+	                <div class="weui_cell_hd">
+	                    	进度
+	                </div>
+	                <div class="weui_cell_bd weui_cell_primary">
+	                    <select class="weui_select" name="percent">
+	                        <option value="10">10%</option>
+	                        <option value="20">20%</option>
+	                        <option value="30">30%</option>
+	                        <option value="40">40%</option>
+	                        <option value="50">50%</option>
+	                        <option value="60">60%</option>
+	                        <option value="70">70%</option>
+	                        <option value="80">80%</option>
+	                        <option value="90">90%</option>
+	                        <option value="100">100%</option>
+	                    </select>
+	                </div>
+	            </div>
+			</div>
+			<div class="button_sp_area" style="text-align: center;margin-left: auto;margin-right: auto;">
+	            <a id="comfirm" class="weui_btn weui_btn_mini weui_btn_primary" style="width: 30%;">确认</a>
+	            <a id="cancle" class="weui_btn weui_btn_mini weui_btn_default" style="width: 30%;">取消</a>						
+			</div>					
+			</form>
+		</div>		
     <div class="weui_dialog_confirm" id="dialog1" style="display: none;">
         <div class="weui_mask"></div>
         <div class="weui_dialog">
